# roop

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
roop/: core.py  predictor.py  utilities.py
