[project]
name = "roop"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "numpy==1.24.3",
    "opencv-python-headless==4.8.0.74",
    "onnx==1.14.0",
    "insightface==0.7.3",
    "psutil==5.9.5",
    "tk==0.1.0",
    "customtkinter==5.2.0",
    "tkinterdnd2==0.3.0",
    "onnxruntime-gpu==1.15.1",
    "pillow==10.0.0",
    "tensorflow==2.13.0",
    "opennsfw2==0.10.2",
    "protobuf==4.23.4",
    "tqdm==4.65.0",
    "gfpgan==1.3.8",
   
]
description = "one-click face swap"
[project.urls]
"Homepage" = "https://github.com/kongqi404/roop"

[project.scripts]
roop-cli = "roop.core:run_cli"
[project.gui-scripts]
roop-gui = "roop.core:run_gui"